change position & canvas

--- a/main.css
+++ b/main.css
@@ -1,7 +1,23 @@
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  font-size: 100%;
+}
+
+
 .main-container {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  background-color: #34314c;
 }
 
 .audio-container {
@@ -18,10 +34,10 @@
   font-size: inherit;
   line-height: normal;
   vertical-align: middle;
-  background-color: #54a0ff;
+  background-color: #47b8e0;
   cursor: pointer;
-  border: 1px solid #54a0ff;
-  border-bottom-color: #54a0ff;
+  border: 1px solid #47b8e0;
+  border-bottom-color: #47b8e0;
   border-radius: 0.25em;
 }
 
